tests/should-fail/rawcodelit-5.j
globals
    integer i = '\x'
endglobals